[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assests/clock.png" type="Texture" id=1]
[ext_resource path="res://Assests/head.png" type="Texture" id=2]
[ext_resource path="res://UI/HUD.gd" type="Script" id=3]
[ext_resource path="res://Assests/Stardew_Valley.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assests/arrow.png" type="Texture" id=5]
[ext_resource path="res://Assests/coin_icon.png" type="Texture" id=6]
[ext_resource path="res://Assests/item_framce.png" type="Texture" id=7]
[ext_resource path="res://Assests/enemy_icon.png" type="Texture" id=8]

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("DownArrow/TextureRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
resource_name = "go_down"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("DownArrow/TextureRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.164706, 0.870588, 0.164706, 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 4 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="DownArrow" type="CenterContainer" parent="."]
anchor_top = 0.85
anchor_right = 1.0
anchor_bottom = 0.85
margin_left = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="DownArrow"]
margin_left = 286.0
margin_right = 302.0
margin_bottom = 16.0
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 7 )
anims/go_down = SubResource( 8 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 27.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timebar" type="MarginContainer" parent="VBoxContainer"]
margin_right = 620.0
margin_bottom = 26.0
custom_constants/margin_right = 16
custom_constants/margin_top = 5
custom_constants/margin_left = 37
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerArea" type="HBoxContainer" parent="VBoxContainer/Timebar"]
margin_left = 37.0
margin_top = 5.0
margin_right = 604.0
margin_bottom = 21.0
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="Clock" type="TextureRect" parent="VBoxContainer/Timebar/TimerArea"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Timebar/TimerArea"]
margin_left = 16.0
margin_right = 567.0
margin_bottom = 16.0
size_flags_horizontal = 3
custom_constants/margin_right = 0
custom_constants/margin_top = 6
custom_constants/margin_bottom = 4

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer/Timebar/TimerArea/MarginContainer"]
margin_top = 6.0
margin_right = 551.0
margin_bottom = 12.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
max_value = 120.0
value = 120.0
percent_visible = false

[node name="Item" type="MarginContainer" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 620.0
margin_bottom = 52.0
custom_constants/margin_left = 12

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Item"]
margin_left = 12.0
margin_right = 620.0
margin_bottom = 22.0
texture = ExtResource( 7 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Item/TextureRect"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/margin_right = 2
custom_constants/margin_top = 3
custom_constants/margin_left = 3
custom_constants/margin_bottom = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item" type="TextureRect" parent="VBoxContainer/Item/TextureRect/MarginContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 38.0
margin_bottom = 38.0

[node name="Lifes" type="MarginContainer" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 620.0
margin_bottom = 73.0
custom_constants/margin_left = 5

[node name="LifeCount" type="HBoxContainer" parent="VBoxContainer/Lifes"]
margin_left = 5.0
margin_right = 620.0
margin_bottom = 17.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Lifes/LifeCount"]
margin_right = 16.0
margin_bottom = 17.0
texture = ExtResource( 2 )

[node name="LivesCounter" type="Label" parent="VBoxContainer/Lifes/LifeCount"]
margin_left = 20.0
margin_right = 34.0
margin_bottom = 17.0
size_flags_vertical = 8
custom_constants/shadow_offset_x = 2
custom_constants/line_spacing = 2
custom_constants/shadow_offset_y = 2
custom_constants/shadow_as_outline = 2
custom_fonts/font = SubResource( 6 )
text = "x7"
align = 1
valign = 1

[node name="Coins" type="MarginContainer" parent="VBoxContainer"]
margin_top = 77.0
margin_right = 620.0
margin_bottom = 94.0
custom_constants/margin_left = 5

[node name="CoinCount" type="HBoxContainer" parent="VBoxContainer/Coins"]
margin_left = 5.0
margin_right = 620.0
margin_bottom = 17.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Coins/CoinCount"]
margin_right = 16.0
margin_bottom = 17.0
texture = ExtResource( 6 )
stretch_mode = 2

[node name="CoinsCounter" type="Label" parent="VBoxContainer/Coins/CoinCount"]
margin_left = 20.0
margin_right = 39.0
margin_bottom = 17.0
size_flags_vertical = 8
custom_constants/shadow_offset_x = 2
custom_constants/line_spacing = 2
custom_constants/shadow_offset_y = 2
custom_constants/shadow_as_outline = 2
custom_fonts/font = SubResource( 6 )
text = "x99"
align = 1
valign = 1

[node name="BossBar" type="MarginContainer" parent="."]
anchor_top = 0.9
anchor_right = 1.0
anchor_bottom = 0.9
margin_top = 4.07999
margin_bottom = 30.08
custom_constants/margin_right = 16
custom_constants/margin_top = 5
custom_constants/margin_left = 37
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthArea" type="HBoxContainer" parent="BossBar"]
margin_left = 37.0
margin_top = 5.0
margin_right = 604.0
margin_bottom = 21.0
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="Clock" type="TextureRect" parent="BossBar/HealthArea"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 8 )

[node name="MarginContainer" type="MarginContainer" parent="BossBar/HealthArea"]
margin_left = 16.0
margin_right = 567.0
margin_bottom = 16.0
size_flags_horizontal = 3
custom_constants/margin_right = 0
custom_constants/margin_top = 6
custom_constants/margin_bottom = 4

[node name="ProgressBar" type="ProgressBar" parent="BossBar/HealthArea/MarginContainer"]
margin_top = 6.0
margin_right = 551.0
margin_bottom = 12.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
max_value = 120.0
value = 120.0
percent_visible = false
